# HTStream

./: CMakeLists.txt
NRemover/: CMakeLists.txt
NRemover/src/: nremover.cpp  nremover.h
NRemover/test/: testNR.cpp
NRemover/test_suite/: prototype.py
QTrimmer/src/: qtrimmer.h
Tab-Converter/: CMakeLists.txt
Tab-Converter/src/: tab-converter.cpp
common/src/: ioHandler.h
prune/: CMakeLists.txt  README.md
prune/source/: argCollector.cpp  argCollector.h  main.cpp  non.cpp  non.h  readInfo.cpp  readInfo.h
prune/src/: prune.cpp
prune/test_suite/: expected_R1.fastq  testPrune.py
